--- a/tracker/test/fixtures/revenue.html
+++ b/tracker/test/fixtures/revenue.html
@@ -7,11 +7,15 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Plausible Playwright tests</title>
 
-  <script defer src="/tracker/js/plausible.local.manual.revenue.js"></script>
+  <script defer src="/tracker/js/plausible.local.manual.revenue.tagged-events.js"></script>
 </head>
 
 <body>
-  <button id="purchase" onclick="window.plausible('Purchase', {revenue: {amount: 15.99, currency: 'USD'}})">
+  <button id="manual-purchase" onclick="window.plausible('Purchase', {revenue: {amount: 15.99, currency: 'USD'}})">
+    Click me
+  </button>
+
+  <button id="tagged-purchase" class="plausible-event-name=Purchase plausible-revenue-currency=EUR plausible-revenue-amount=13.32">
     Click me
   </button>
 </body>
